# mundi

./: .coveragerc  .gitignore  .gitmodules  CHANGELOG.rst  README.rst  pyproject.toml  tasks.py
.github/workflows/: pythonpackage.yml
data/BR/: divisao-do-territorio-distritos.csv  prepare.py  regionais-de-saude.csv  state_codes.json  states.csv  sus-cities.csv  sus-macros.csv  sus-regions.py
data/XX/: continents.csv  countries-to-continents.csv  prepare-countries.py  prepare-subdivisions.py  world-bank-summary.csv
docs/: api-guide.rst  conf.py  faq.rst  index.rst
docs/_build/doctest/: output.txt
docs/plugins/: factbook.rst
mundi/: __init__.py  __main__.py  _utils.py  cli.py  config.py  constants.py  database.py  db.py  enums.py  extra.py  filling_policies.py  fix.py  functions.py  impute.py  loader.py  logging.py  pandas.py  prepare.py  transforms.py  typing.py  utils.py
mundi-data/: README.rst
mundi/databases/: db-wb.pkl  db.sqlite
mundi/db/: __init__.py  core.py  database.py  plugin.py  query.py  tables.py
mundi/helpers/: br.py
mundi/pandas/: __init__.py  demography_accessor.py  mundi_accessor.py
mundi/pipeline/: __init__.py  __main__.py  collector.py  data.py  importer.py  mapper.py  plugin.py
mundi/plugin/: plugin.py  utils.py
mundi/plugins/: __init__.py  demography.py  healthcare.py  main.py  plugin.py  pydemic.py  region.py  registry.py
mundi/prepare/: __main__.py  loader.py  pycountry.py  region.py  wb_summary.py
mundi/types/: __init__.py  multi_region.py  region.py  region_plugins.py  region_set.py  typing.py
notebooks/: demo.ipynb  imputer.ipynb
tests/: _test_composite_region.py  _test_dataframe_accessor.py  _test_plugins.py  _test_transformers.py  test_dataframe_accessor.py  test_db.py  test_functions.py  test_plugins.py  test_region.py  test_transformers.py
tests/plugins/: test_demography_plugin.py
(+1230 files in other folders)
