[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mundi"
dist-name = "mundi"
author = "Fábio Macêdo Mendes"
author-email = "fabiomacedomendes@gmail.com"
home-page = "https://github.com/pydemic/mundi"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
]
description-file = "README.rst"
requires = [
    "pandas",
    "sqlalchemy",
    "sidekick",
    "click",
]

[project.entry-points]
mundi_plugins = [
    "region = mundi.plugins.region:RegionPlugin",
    "demography = mundi.plugins.demography:DemographyPlugin",
    "healthcare = mundi.plugins.healthcare:HealthcarePlugin",
]

[tool.flit.metadata.requires-extra]
dev = [
    "black",
    "twine",
    "invoke",
    "pycountry",
    "coverage~=5.0",
    "pytest~=5.0",
    "sphinx",
]

[tool.black]
line-length = 90
